--- a/index.html
+++ b/index.html
@@ -449,6 +449,103 @@
       color: var(--text-main);
     }
 
+    /* Tablet responsiveness for About card */
+    @media (max-width: 768px) {
+      .about-card {
+        max-width: 100%;
+        padding: 1rem;
+        gap: 0.75rem;
+      }
+
+      .code-header {
+        gap: 0.5rem;
+        padding: 0.5rem 0.75rem;
+      }
+
+      .code-header .file-name {
+        font-size: 0.85rem;
+      }
+
+      .code-body pre {
+        padding: 0.75rem;
+        font-size: 0.85rem;
+        max-height: 280px;
+      }
+
+      .about-text .section-title {
+        font-size: 2rem;
+      }
+
+      .about-text p {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+      }
+    }
+
+    /* Mobile responsiveness for About card */
+    @media (max-width: 480px) {
+      .about-card {
+        max-width: 100%;
+        padding: 0.875rem;
+        gap: 0.625rem;
+      }
+
+      .code-header {
+        gap: 0.4rem;
+        padding: 0.4rem 0.6rem;
+        flex-wrap: wrap;
+      }
+
+      .code-header .dot {
+        width: 10px;
+        height: 10px;
+      }
+
+      .code-header .file-name {
+        font-size: 0.75rem;
+        width: 100%;
+        text-align: center;
+        margin-left: 0;
+        margin-top: 0.3rem;
+      }
+
+      .code-body pre {
+        padding: 0.625rem;
+        font-size: 0.75rem;
+        line-height: 1.4;
+        max-height: 200px;
+      }
+
+      .about-text .section-header {
+        margin-bottom: 1.5rem;
+      }
+
+      .about-text .section-title {
+        font-size: 1.5rem;
+        margin-bottom: 0.5rem;
+      }
+
+      .about-text .section-subtitle {
+        font-size: 0.95rem;
+      }
+
+      .about-text p {
+        font-size: 0.9rem;
+        margin-bottom: 0.75rem;
+        line-height: 1.5;
+      }
+
+      .hero-btns {
+        flex-direction: column;
+        gap: 0.75rem;
+      }
+
+      .btn {
+        width: 100%;
+        justify-content: center;
+      }
+    }
+
     @media (max-width: 900px) {
       .about-grid { grid-template-columns: 1fr; }
     }
