Fix About card responsive media queries - move base styles before breakpoints

--- a/index.html
+++ b/index.html
@@ -449,6 +449,28 @@
       color: var(--text-main);
     }
 
+    .about-text p {
+      margin-bottom: 1.5rem;
+      color: var(--text-muted);
+      font-size: 1.1rem;
+    }
+
+    /* Medium screen responsiveness for About card */
+    @media (max-width: 1024px) {
+      .about-card {
+        max-width: 95%;
+        padding: 1.1rem;
+      }
+
+      .code-body pre {
+        font-size: 0.9rem;
+      }
+
+      .about-text p {
+        font-size: 1.05rem;
+      }
+    }
+
     /* Tablet responsiveness for About card */
     @media (max-width: 768px) {
       .about-card {
@@ -548,12 +570,6 @@
 
     @media (max-width: 900px) {
       .about-grid { grid-template-columns: 1fr; }
-    }
-
-    .about-text p {
-      margin-bottom: 1.5rem;
-      color: var(--text-muted);
-      font-size: 1.1rem;
     }
 
     .about-image {
