--- a/index.html
+++ b/index.html
@@ -393,35 +393,20 @@
 
     .about-grid {
       display: grid;
-      grid-template-columns: 1fr; /* single column to center the about-card */
-      gap: 2rem;
-      align-items: center;
-      justify-items: center; /* center children horizontally within the grid */
+      grid-template-columns: 1fr 1fr;
+      gap: 3rem;
+      align-items: start;
     }
 
     /* New: single about card containing vitals JS and about text stacked */
     .about-card {
-      background: var(--bg-card);
-      border: 1px solid var(--border-color);
-      border-radius: 20px;
-      padding: 1.25rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      box-shadow: 0 8px 20px rgba(2,6,23,0.6);
-    }
-
-    /* Constrain card width so it appears centered and proportional */
-    .about-card {
-      width: 100%;
-      max-width: 920px;
-      margin: 0 auto;
+      display: none; /* hide unused card wrapper */
     }
 
     .code-window {
-      background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      background: rgba(0, 0, 0, 0.3);
       border-radius: 12px;
-      border: 1px solid rgba(255,255,255,0.03);
+      border: 1px solid rgba(255, 255, 255, 0.05);
       overflow: hidden;
     }
 
@@ -430,8 +415,8 @@
       align-items: center;
       gap: 0.75rem;
       padding: 0.6rem 0.9rem;
-      background: rgba(0,0,0,0.12);
-      border-bottom: 1px solid rgba(255,255,255,0.02);
+      background: rgba(0, 0, 0, 0.2);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.05);
     }
 
     .code-header .file-name {
@@ -447,19 +432,21 @@
       overflow: auto;
       font-size: 0.95rem;
       color: var(--text-main);
+      line-height: 1.5;
     }
 
     .about-text p {
       margin-bottom: 1.5rem;
       color: var(--text-muted);
       font-size: 1.1rem;
+      line-height: 1.7;
     }
 
-    /* Medium screen responsiveness for About card */
+    /* Medium screen responsiveness for About section */
     @media (max-width: 1024px) {
-      .about-card {
-        max-width: 95%;
-        padding: 1.1rem;
+      .about-grid {
+        grid-template-columns: 1fr;
+        gap: 2.5rem;
       }
 
       .code-body pre {
@@ -471,12 +458,10 @@
       }
     }
 
-    /* Tablet responsiveness for About card */
+    /* Tablet responsiveness for About section */
     @media (max-width: 768px) {
-      .about-card {
-        max-width: 100%;
-        padding: 1rem;
-        gap: 0.75rem;
+      .about-grid {
+        gap: 2rem;
       }
 
       .code-header {
@@ -504,12 +489,10 @@
       }
     }
 
-    /* Mobile responsiveness for About card */
+    /* Mobile responsiveness for About section */
     @media (max-width: 480px) {
-      .about-card {
-        max-width: 100%;
-        padding: 0.875rem;
-        gap: 0.625rem;
+      .about-grid {
+        gap: 1.5rem;
       }
 
       .code-header {
@@ -566,10 +549,6 @@
         width: 100%;
         justify-content: center;
       }
-    }
-
-    @media (max-width: 900px) {
-      .about-grid { grid-template-columns: 1fr; }
     }
 
     .about-image {
@@ -1765,16 +1744,15 @@
   <section id="about" class="section">
     <div class="container">
       <div class="about-grid">
-        <div class="about-card" data-aos="fade-up">
-          <div class="code-window" data-aos="zoom-in">
-            <div class="code-header">
-              <div class="dot red"></div>
-              <div class="dot yellow"></div>
-              <div class="dot green"></div>
-              <span class="file-name">pavan_vitals.js</span>
-            </div>
-            <div class="code-body">
-              <pre><code><span class="keyword">const</span> <span class="variable">pavan</span> = {
+        <div class="code-window" data-aos="zoom-in">
+          <div class="code-header">
+            <div class="dot red"></div>
+            <div class="dot yellow"></div>
+            <div class="dot green"></div>
+            <span class="file-name">pavan_vitals.js</span>
+          </div>
+          <div class="code-body">
+            <pre><code><span class="keyword">const</span> <span class="variable">pavan</span> = {
   role: <span class="string">"Software Engineer"</span>,
   currentStudy: <span class="string">"MCA @ Sir MVIT"</span>,
   location: <span class="string">"Bengaluru, India"</span>,
@@ -1785,24 +1763,23 @@
     linkedin: <span class="string">"&lt;a href=&quot;https://www.linkedin.com/in/pavan-magadum-8477682b6/&quot; target=&quot;_blank&quot; style=&quot;color:inherit;text-decoration:underline;&quot;&gt;pavan-magadum&lt;/a&gt;"</span>
   }
 };</code></pre>
-            </div>
           </div>
+        </div>
 
-          <div class="about-text" data-aos="fade-left">
-            <div class="section-header">
-              <h2 class="section-title">About Me</h2>
-              <p class="section-subtitle">A journey from basic coding to complex ML models.</p>
-            </div>
-            <p>I am a Master of Computer Applications student at Sir M. Visvesvaraya Institute of Technology with a strong
-              foundation in Java,Python, C, and Data Structures.</p>
-            <p>My interest lies at the intersection of traditional software development and modern data science. I thrive
-              on solving analytical problems and building systems that can make a real difference, like my recent
-              climate-aware crop recommendation system.</p>
-            <p>I'm currently seeking entry-level roles where I can apply my analytical thinking and problem-solving skills
-              to develop innovative software solutions.</p>
-            <div class="hero-btns">
-              <a href="mailto:pavanmagadum8@gmail.com" class="btn btn-primary">Contact Me</a>
-            </div>
+        <div class="about-text" data-aos="fade-left">
+          <div class="section-header">
+            <h2 class="section-title">About Me</h2>
+            <p class="section-subtitle">A journey from basic coding to complex ML models.</p>
+          </div>
+          <p>I am a Master of Computer Applications student at Sir M. Visvesvaraya Institute of Technology with a strong
+            foundation in Java, C, and Data Structures.</p>
+          <p>My interest lies at the intersection of traditional software development and modern data science. I thrive
+            on solving analytical problems and building systems that can make a real difference, like my recent
+            climate-aware crop recommendation system.</p>
+          <p>I'm currently seeking entry-level roles where I can apply my analytical thinking and problem-solving skills
+            to develop innovative software solutions.</p>
+          <div class="hero-btns">
+            <a href="mailto:pavanmagadum8@gmail.com" class="btn btn-primary">Contact Me</a>
           </div>
         </div>
       </div>
